--- a/bib/thesis.bib
+++ b/bib/thesis.bib
@@ -229,6 +229,13 @@
   note = {\url{https://www.linux-kvm.org/page/Main_Page}}
 }
 
+@misc{perf,
+  title = {perf: Linux profiling with performance counters},
+  howpublished = {Website},
+  year = {2015},
+  note = {\url{https://perf.wiki.kernel.org/index.php/Main_Page}}
+}
+
 @misc{migrationppt,
   title = {分布式系统中的进程迁移},
   howpublished = {Website},
@@ -477,5 +484,28 @@
   doi       = {10.1145/1952682.1952698},
   timestamp = {Tue, 06 Nov 2018 11:06:43 +0100},
   biburl    = {https://dblp.org/rec/conf/vee/SvardHTE11.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@inproceedings{borg,
+  author    = {Abhishek Verma and
+               Luis Pedrosa and
+               Madhukar Korupolu and
+               David Oppenheimer and
+               Eric Tune and
+               John Wilkes},
+  editor    = {Laurent R{\'{e}}veill{\`{e}}re and
+               Tim Harris and
+               Maurice Herlihy},
+  title     = {Large-scale cluster management at Google with Borg},
+  booktitle = {Proceedings of the Tenth European Conference on Computer Systems,
+               EuroSys 2015, Bordeaux, France, April 21-24, 2015},
+  pages     = {18:1--18:17},
+  publisher = {{ACM}},
+  year      = {2015},
+  url       = {https://doi.org/10.1145/2741948.2741964},
+  doi       = {10.1145/2741948.2741964},
+  timestamp = {Tue, 06 Nov 2018 16:58:31 +0100},
+  biburl    = {https://dblp.org/rec/conf/eurosys/VermaPKOTW15.bib},
   bibsource = {dblp computer science bibliography, https://dblp.org}
 }
