--- a/tex/chapter03.tex
+++ b/tex/chapter03.tex
@@ -4,7 +4,7 @@
 %%==================================================
 
 %\bibliographystyle{sjtu2}%[此处用于每章都生产参考文献]
-\chapter{基于巨型虚拟机的集群调度器设计}
+\chapter{粗粒度的的调度器设计}
 \label{chap:LB}
 本章讲述如何利用巨型虚拟机设计一个高效的集群调度器，在不影响集群中任务的服务质量的同时，也可以提高集群总体CPU资源的使用率。为此，我们提出三条设计理念（设计目标），再详述我们的设计细节，并且就每条设计目标讨论设计的目的是否达成。
 \section{设计理念与设计目标}
@@ -27,9 +27,9 @@
     {Task Migration Mechanism Based on GiantVM}
   \label{fig:schedule}
 \end{figure}
-我们将巨型虚拟机的客户机操作系统作为集群节点之间交换任务负载的桥梁：我们把任务分为可迁移任务（migratable tasks）和不可迁移任务（fixed tasks）。在图\ref{fig:schedule}中，颜色较深的圆圈代表不可迁移任务，系统通常为其分配较充足的资源，故用大圆表示，而颜色较浅的小圆代表可迁移任务。巨型虚拟机横跨多个节点，通过分布式虚拟机运输可迁移任务。在每个迁移周期中，我们扫描整个系统内所有的进程，选择一部分可迁移进程加入巨型虚拟机的客户机中。巨型虚拟机对客户机提供一个模拟的NUMA硬件环境，每一个NUMA节点代表分布式集群中的一个节点，从而使得客户机得知底层的硬件环境的拓扑结构。我们在客户机中设计一个专用的调度器，它可以动态感知每个NUMA节点下的真实物理节点的负载。当迁移条件满足时（如宿主集群某个节点CPU占用率超过阈值），调度器读取每个节点的负载，选取负载最低的节点，将可迁移任务调度到该NUMA节点上。被迁移的任务虽然不会有下线时间，但是由于分布式共享内存组件的存在，需要对一部分内存页进行迁移，也会造成一定的性能影响。借助于巨型虚拟机，任务的迁移过程有所变化：客户机中的进程向运行在其他NUMA节点的vCPU上迁移等同于进程在集群节点间迁移。如图\ref{fig:schedule}所示，Node0中可迁移型任务对系统资源占用过高，于是触发了不可迁移型任务在巨型虚拟机中的迁移。
+我们将巨型虚拟机的客户机操作系统作为集群节点之间交换任务负载的桥梁：我们把任务分为可迁移任务（migratable tasks）和不可迁移任务（fixed tasks）。在图\ref{fig:schedule}中，颜色较深的圆圈代表不可迁移任务，系统通常为其分配较充足的资源，故用大圆表示，而颜色较浅的小圆代表可迁移任务。巨型虚拟机横跨多个节点，通过分布式虚拟机运输可迁移任务。在每个迁移周期中，我们扫描整个系统内所有的进程，选择一部分可迁移进程加入巨型虚拟机的客户机中。巨型虚拟机对客户机提供一个模拟的NUMA硬件环境，每一个NUMA节点代表分布式集群中的一个节点，从而使得客户机得知底层的硬件环境的拓扑结构。我们在客户机中设计一个专用的调度器，它可以动态感知每个NUMA节点下的真实物理节点的负载。当迁移条件满足时（如宿主集群某个节点CPU占用率超过阈值），调度器读取每个节点的负载，选取负载最低的节点，将可迁移任务调度到该NUMA节点上。被迁移的任务虽然不会有下线时间，但是由于分布式共享内存组件的存在，需要对一部分内存页进行迁移，也会造成一定的性能影响。借助于巨型虚拟机，任务的迁移过程有所变化：客户机中的进程向运行在其他NUMA节点的vCPU上迁移等同于进程在集群节点间迁移。如图\ref{fig:schedule}所示，Node0中不可迁移型任务对系统资源占用过高，于是触发了可迁移型任务在巨型虚拟机中的迁移。
 
-对于如何将任务分类为可迁移任务和不可迁移任务，目前的实现是把延迟敏感型任务（LC tasks）作为不可迁移任务，它们不能承受性能的损失（例如一些业务进程，如果延迟提高则会使得收益受到影响），而将尽力而为型任务（BE tasks）作为可迁移任务，其延迟增长对用户的影响不大（例如一些用于开发实验的进程，为了测试未投入使用的代码，或一些数据分析程序）。在图\ref{fig:schedule}中LC型任务即不可迁移任务，BE型任务即可迁移任务。在这样的分类之下，延迟敏感型任务的服务质量将不会受到影响，而尽力而为型任务正好将延迟敏感型任务未使用的资源利用起来：由于延迟敏感型任务无法承受性能损失，系统为其分配了足够多的CPU资源，来应对其可能出现的CPU利用率突增，而事实上大部分时间内这些CPU资源都无法完全利用，于是当延迟敏感型任务占用较低时，巨型虚拟机将尽力而为型任务调度到对应的节点上，填补CPU使用率的空缺，从而提高了集群总体的CPU使用率。
+对于如何将任务分类为可迁移任务和不可迁移任务，目前的实现是把延迟敏感型任务（LC tasks）作为不可迁移任务，它们不能承受性能的损失（例如一些业务进程，如果延迟提高则会使得收益受到影响），而将尽力而为型任务（BE tasks）作为可迁移任务，其延迟增长对用户的影响不大（例如一些用于开发实验的进程，为了测试未投入使用的代码，或一些数据分析程序）。在图\ref{fig:schedule}中LC型任务即不可迁移任务，BE型任务即可迁移任务。在这样的分类之下，延迟敏感型任务的服务质量将不会受到影响，而尽力而为型任务正好将延迟敏感型任务未使用的资源利用起来：由于延迟敏感型任务无法承受性能损失，系统为其分配了足够多的CPU资源，来应对其可能出现的CPU利用率突增，而事实上大部分时间内这些CPU资源都无法完全利用，于是当延迟敏感型任务占用较低时，巨型虚拟机将尽力而为型任务调度到对应的节点上，填补CPU使用率的空缺，从而提高了集群总体的CPU资源占用率。
 
 \subsection{调度脚本实现}
 \begin{figure}[!htp]
@@ -43,35 +43,31 @@
 
 \begin{algorithm}[h]
 \begin{algorithmic}[1]
-\Function {set\_affinity}{$node\_cpu\_list$}
+\Function {set\_affinity\_all}{$node\_cpu\_list$}
 \For{each $task, irq, wq\in OS$}
 \State
-\Call{taskset}{$task, node\_cpu\_list$}
+\Call{set\_affinity}{$task, node\_cpu\_list$}
 \State
-\Call{taskset}{$irq, node\_cpu\_list$}
+\Call{set\_affinity}{$irq, node\_cpu\_list$}
 \State
-\Call{taskset}{$wq, node\_cpu\_list$}
+\Call{set\_affinity}{$wq, node\_cpu\_list$}
 \EndFor
 \EndFunction
 \State
-\Call {set\_affinity}{$node0\_cpu\_list$}
+\Call {set\_affinity\_all}{$node0\_cpu\_list$}
 \While{true}
-\For{$node = 0 \to NR\_NODES-1$}
-\State $prev\_nodes\_stealtime[node] \gets stealtime()$
-\EndFor
+\State $prev\_nodes\_stealtime \gets stealtime()$
 \State
 \Call {sleep}{2}
-\For{$node = 0 \to NR\_NODES-1$}
-\State $nodes\_stealtime[node] \gets stealtime()$
-\State $stealtime\_diff[node] \gets nodes\_stealtime[node] - prev\_nodes\_stealtime[node]$
-\EndFor
-\If{$SUM(stealtime\_diff) \le THRESHOLD$}
-\State continue
+\State $nodes\_stealtime \gets stealtime()$
+\State $stealtime\_diff \gets nodes\_stealtime - prev\_nodes\_stealtime$
+\State $min\_stealtime,\,min\_stealtime\_node \gets find\_min\_stealtime\_node()$
+\If {$this\_node \eq min\_stealtime\_node \lor stealtime\_diff[this\_node] < threshold$}
+\State $continue$
 \EndIf
-\State $min\_stealtime\_node \gets find\_min\_stealtime\_node(stealtime\_diff)$
 \State $cpu\_list \gets get\_cpu\_list(min\_stealtime\_node)$
 \State
-\Call {set\_affinity} {$cpu\_list$}
+\Call {set\_affinity\_all} {$cpu\_list$}
 \EndWhile
 \end{algorithmic}
 \caption{粗粒度进程调度算法}
@@ -79,11 +75,12 @@
 \end{algorithm}
 事实上，上节所述的调度机制应当使用C代码来实现，即在Linux内核中添加一个新的调度器类（Linux内核中有多种调度算法，每种调度算法自成一个调度器类，由核心调度器调用。现有的调度类有完全公平调度类、实时调度类、空闲调度类）。然而操作系统已经给用户层提供了足够多的接口来实现我们所说的调度策略，而增添一个新的调度器类工作量较大，调试各类参数比较困难，故我们选择使用shell脚本实现调度算法。目前在Linux上实现了一个粗粒度调度算法，而细粒度调度算法将作为未来的工作。
 
-客户机中调度脚本的实现如算法\ref{algo:coarse}所示，对应的bash脚本是rebalance.sh。对于粗粒度的调度算法，如图\ref{fig:coarse}，我们通常将巨型虚拟机部署在四个节点上，只需要找到四个NUMA节点中宿主机占用最低的节点，将客户机中所有的任务迁移到该NUMA节点上即可（颜色深的节点代表其负载较高）。虽然这样减少了客户机中进程可以使用的虚拟CPU个数，但是最大程度的减少了网络的开销，由于任何两个NUMA节点之间无需共享内存数据，而只有一个NUMA节点上有任务在运行。
-/proc文件夹是Linux内核为用户态程序提供内核信息的文件夹，用户态程序也可通过写入/proc文件夹中的某个文件更改内核的配置。在本文中，我们读取/proc/stat文件的内容完成两个功能：一是获取宿主机节点上的CPU使用率，二是在客户机操作系统中获取steal time。/proc/stat文件包含了自系统启动以来累计的CPU节拍数，CPU空闲的节拍数，以及因为虚拟化所产生的累计的Steal Time。Steal time指虚拟CPU等待底层物理CPU执行其他宿主机指令或者其他虚拟CPU的时间，直接向客户机反映了宿主机的工作负载状态。我们设置rebalance.sh作为系统启动项，这样客户机的运行将被该脚本所控制。在rebalance.sh中，我们每隔一个时间间隔读取一次Steal Time，将两次读取的Steal Time相减，即可获知该时间段内宿主机的工作负载情况。我们设置了一个阈值（50个节拍数），当某个时间间隔内的Steal Time超过该阈值时，即启动调度过程。选择Steal Time最低的节点，将所有的进程调度到该节点上（通过taskset指令，其本质是修改了task\_struct中的cpumask，即修改了进程可以运行的CPU列表），同时为了最小化NUMA节点之间的内存共享，我们将中断全部发送给该选中的NUMA节点的CPU上（通过写入/proc/irq文件），也将所有workqueue固定在这些CPU上。最小化NUMA节点之间的内存共享，我们尚未实现细粒度的调度器。这需要探查进程的内存使用情况，可以作为本文的未来工作。
+对于粗粒度的调度算法，如图\ref{fig:coarse}，我们通常将巨型虚拟机部署在四个节点上，只需要找到四个NUMA节点中宿主机占用最低的节点，将客户机中所有的任务迁移到该NUMA节点上即可（颜色深的节点代表其负载较高）。客户机中调度脚本的实现如算法\ref{algo:coarse}所示，对应的bash脚本是rebalance.sh。我们设置rebalance.sh作为系统启动项，系统启动时，调用$set\_affinity\_all()$使得OS中所有的进程都运行在Node0上，Node之间无需做网络通信，缩短了启动时间。此后，每个调度周期中，读取两次累计的steal time做差得到该时段内的steal time，如果当前所有进程运行的节点的steal time超过了一个阈值（50个节拍），即触发迁移，调用$set\_affinity\_all()$将所有进程固定在steal time最低的节点上。虽然这样减少了客户机中进程可以使用的虚拟CPU个数，但是最大程度的减少了网络的开销，由于任何两个NUMA节点之间无需共享内存数据，而只有一个NUMA节点上有任务在运行。
+
+/proc文件夹是Linux内核为用户态程序提供内核信息的文件夹，用户态程序也可通过写入/proc文件夹中的某个文件更改内核的配置。在本文中，我们读取/proc/stat文件的内容完成两个功能：一是获取宿主机节点上的CPU使用率，二是在客户机操作系统中获取steal time。/proc/stat文件包含了自系统启动以来累计的CPU节拍数，CPU空闲的节拍数，以及因为虚拟化所产生的累计的steal time。steal time指虚拟CPU等待物理CPU执行其他宿主机指令或者其他虚拟CPU的时间，直接向客户机反映了宿主机的工作负载状态。这样客户机的运行将被该脚本所控制。进程调度通过taskset指令实现，其本质是修改了task\_struct中的cpumask，即修改了进程可以运行的CPU列表。同时为了最小化NUMA节点之间的内存共享，我们将中断全部发送给该选中的NUMA节点的CPU上（通过写入/proc/irq文件），也将所有workqueue固定在这些CPU上。
 
 \subsection{性能优势}
-巨型虚拟机的进程调度等价于虚拟机热迁移，且迁移开销较低，没有下线时间，是最适合于资源重分配的迁移方式（见第\ref{chap:reallocation}节，资源重分配同步于系统中频繁变化的负载，迁移的频率较高）。当巨型虚拟机中的进程被taskset到某一节点上时，由于分布式共享内存模块的内存同步协议，会产生大量的EPT缺页异常，会使得被迁移任务的服务质量严重下降。发生EPT缺页异常后，分布式共享内存模块开始传输该进程的页，直到该进程频繁访问的页被完全传输到目标节点。虽然巨型虚拟机的进程调度会经历如此的性能下降，但是其开销还是远小于虚拟机热迁移的开销，因为分布式共享内存只会在各个节点之间传输被频繁修改的页。根据第\ref{chap:mem}节对于进程虚拟内存空间分布的分析，我们以客户机的物理页为中心讨论巨型虚拟机相比于虚拟机热迁移无需传输哪些页（EPT将客户机物理页映射到宿主机物理页，故讨论客户机物理页即是讨论宿主机物理）：（1）所有被客户机内进程映射为只读的客户机物理页，包括内核态和用户态的.text 段和.rodata段。（2）未被映射进入任何客户机进程的虚拟地址空间以及内核虚拟地址空间的物理页。（3）Linux进程有一个当前进程频繁访问的物理页面的集合。由于数据访问的局部性（data/space locality），进程通常有一个固定大小频繁访问的内存区域，故客户机有部分物理内存虽然被映射进入某个虚拟地址空间，但进程很少访问它们。以上三类页面是虚拟机热迁移过程中无法区分的，在迁移一个完整的虚拟机时，必须将其所有使用的宿主机物理页面全部进行迁移。
+巨型虚拟机的进程调度等价于虚拟机热迁移，且迁移开销较低，没有下线时间，比较适合资源重分配的集群负载平衡方式（见第\ref{chap:reallocation}节，资源重分配同步于系统中频繁变化的负载，迁移的频率较高）。当巨型虚拟机中的进程被taskset到某一节点上时，由于分布式共享内存模块的内存同步协议，会产生大量的EPT缺页异常，会使得被迁移任务的服务质量严重下降。发生EPT缺页异常后，分布式共享内存模块开始传输该进程的页，直到该进程频繁访问的页被完全传输到目标节点。虽然巨型虚拟机的进程调度会经历如此的性能下降，但是其开销还是远小于虚拟机热迁移的开销，因为分布式共享内存只会在各个节点之间传输被频繁修改的页。根据第\ref{chap:mem}节对于进程虚拟内存空间分布的分析，我们以客户机的物理页为中心讨论巨型虚拟机相比于虚拟机热迁移无需传输哪些页（EPT将客户机物理页映射到宿主机物理页，故讨论客户机物理页即是讨论宿主机物理）：（1）所有被客户机内进程映射为只读的客户机物理页，包括内核态和用户态的.text 段和.rodata段。（2）未被映射进入任何客户机进程的虚拟地址空间以及内核虚拟地址空间的物理页。（3）Linux进程有一个当前进程频繁访问的物理页面的集合。由于数据访问的局部性（data/space locality），进程通常有一个固定大小频繁访问的内存区域，故客户机有部分物理内存虽然被映射进入某个虚拟地址空间，但进程很少访问它们。以上三类页面是虚拟机热迁移过程中无法区分的，在迁移一个完整的虚拟机时，必须将其所有使用的宿主机物理页面全部进行迁移。
 
 \section{本章小结}
-本章提出了三个集群调度器的设计理念，并且描述了如何使用巨型虚拟机完成集群调度功能，以及其shell脚本实现的粗粒度进程调度算法，主要是通过在客户机中读取steal time动态感知宿主机节点上的工作负载，将所有客户机中的进程迁移到steal time最小的节点上。本章提出的shell脚本的实现可以在任何Linux操作系统中部署，无需修改现有软件，并且相比于虚拟机热迁移大大缩减了被迁移的页面数量，有较高的迁移性能，且无下线时间，达到了本章开始设定的设计目标。
+本章提出了三个集群调度器的设计理念，并且描述了如何使用巨型虚拟机完成集群调度功能，以及其shell脚本实现的粗粒度进程调度算法，动态感知负载情况。本章设计的shell脚本的实现可以在任何Linux操作系统中部署，无需修改现有软件，并且相比于虚拟机热迁移大大缩减了被迁移的页面数量，有较高的迁移性能，且无下线时间，达到了本章开始设定的设计目标。
