--- a/tex/id.tex
+++ b/tex/id.tex
@@ -1,5 +1,5 @@
 %# -*- coding: utf-8-unix -*-
-\title{分布式环境下调度算法的设计与优化}
+\title{基于巨型虚拟机的集群调度器设计}
 \author{贾兴国}
 \advisor{戚正伟教授}
 % \coadvisor{某某教授}
@@ -9,7 +9,7 @@
 \studentnumber{516030910084}
 \major{软件工程}
 
-\englishtitle{Implementation and Optimization of Scheduling Algorithm In Distributed Environment}
+\englishtitle{Implementation of Cluster Scheduling Algorithm Based On Giant Virtual Machine}
 \englishauthor{\textsc{Xingguo Jia}}
 \englishadvisor{Prof. \textsc{Zhengwei Qi}}
 % \englishcoadvisor{Prof. \textsc{Uom Uom}}
