--- a/thesis.tex
+++ b/thesis.tex
@@ -87,6 +87,8 @@
 \include{tex/chapter02}
 \include{tex/chapter03}
 \include{tex/chapter04}
+\include{tex/chapter05}
+\include{tex/chapter06}
 %\include{tex/example}
 %\include{tex/faq}
 %\include{tex/summary}
